# shapxplain

./: .env_example  .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
examples/notebooks/: basic_usage.ipynb
src/shapxplain/: __init__.py  explainers.py  llm_client.py  prompts.py  schemas.py  utils.py
src/shapxplain/core/: main.py
src/shapxplain/explainer/: shap_llm.py
src/shapxplain/models/: base_model.py
tests/: conftest.py  test_explainers.py  test_prompts.py  test_schemas.py  test_utils.py
