[tool.poetry]
name = "shapxplain"
version = "0.1.0"
description = "SHAP and LLM-based explanations for model interpretability"
authors = ["Mike Pearmain <michael.pearmain@gmail.com>"]
readme = "README.md"
packages = [{include = "shapxplain", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
numba = "^0.60.0"
shap = "^0.41.0"
openai = "^0.28.0"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
